Added Static html

--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -29,7 +29,7 @@ date.format=yyyy-MM-dd
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-# http.port=9000
+http.port=8090
 #
 # By default the server listen for HTTP on the wilcard address.
 # You can restrict this.
@@ -214,11 +214,19 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
-db.url=jdbc:sqlserver://192.168.1.4:1433;databaseName=test3
-db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-db.user=uservad
-db.pass=uservad
 
-jpa.dialect=org.hibernate.dialect.SQLServerDialect
-jpa.ddl=update
+
+#db.url=jdbc:sqlserver://192.168.1.4:1433;databaseName=test3
+#db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#db.user=uservad
+#db.pass=uservad
+
+db.url=jdbc:mysql://localhost/ginger_P
+db.driver=com.mysql.jdbc.Driver
+db.user=root
+db.pass=
+
+#jpa.dialect=org.hibernate.dialect.SQLServerDialect
+jpa.dialect=org.hibernate.dialect.MySQLDialect
+jpa.ddl=create
 jpa.debugSQL=true
