--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -214,11 +214,22 @@ mail.smtp=mock
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
 %test.mail.smtp=mock
-db.url=jdbc:sqlserver://192.168.1.4:1433;databaseName=test3
-db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-db.user=uservad
-db.pass=uservad
+#db.url=jdbc:sqlserver://192.168.1.4:1433;databaseName=test3
+#db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#db.user=uservad
+#db.pass=uservad
+#
+#jpa.dialect=org.hibernate.dialect.SQLServerDialect
+#jpa.ddl=update
+#jpa.debugSQL=true
+db.url=jdbc:mysql://localhost/test15
+#db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db.driver=com.mysql.jdbc.Driver
+db.user=root
+db.pass=root
 
-jpa.dialect=org.hibernate.dialect.SQLServerDialect
+#jpa.dialect=org.hibernate.dialect.SQLServerDialect
+jpa.dialect=org.hibernate.dialect.MySQLDialect
 jpa.ddl=update
 jpa.debugSQL=true
+module.paginate=${play.path}/modules/paginate-head
