--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -228,5 +228,5 @@ db.pass=
 
 #jpa.dialect=org.hibernate.dialect.SQLServerDialect
 jpa.dialect=org.hibernate.dialect.MySQLDialect
-jpa.ddl=create
+jpa.ddl=update
 jpa.debugSQL=true
