--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -221,7 +221,7 @@ mail.smtp=mock
 #db.user=uservad
 #db.pass=uservad
 
-db.url=jdbc:mysql://localhost/ginger_P
+db.url=jdbc:mysql://localhost/ginger_P2
 db.driver=com.mysql.jdbc.Driver
 db.user=root
 db.pass=
