updated clusters forms to accomodate the new model and the corresponding sql script changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 vad-ginger/eclipse
 vad-ginger/modules
-vadginger-alpha/conf/application.conf
 vadginger-alpha/eclipse
 vadginger-alpha/modules
+vadginger-alpha/conf/application.conf
 vadginger-alpha/tmp
+vadginger-alpha/.classpath
+vadginger-alpha/.project
 
