--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -29,7 +29,7 @@ date.format=yyyy-MM-dd
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-http.port=9000
+http.port=8090
 #
 # By default the server listen for HTTP on the wilcard address.
 # You can restrict this.
@@ -221,12 +221,12 @@ mail.smtp=mock
 #db.user=uservad
 #db.pass=uservad
 
-db.url=jdbc:mysql://localhost/ginger_P3
+db.url=jdbc:mysql://localhost/ginger_P2
 db.driver=com.mysql.jdbc.Driver
 db.user=root
-db.pass=root
+db.pass=
 
 #jpa.dialect=org.hibernate.dialect.SQLServerDialect
 jpa.dialect=org.hibernate.dialect.MySQLDialect
 jpa.ddl=update
-jpa.debugSQL=true
+jpa.debugSQL=false
