--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -69,7 +69,7 @@ http.port=9000
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-# application.log=INFO
+#application.log=ERROR
 #
 # More logging configuration
 # application.log.path=/log4j.properties
@@ -221,7 +221,7 @@ mail.smtp=mock
 #db.user=uservad
 #db.pass=uservad
 
-db.url=jdbc:mysql://localhost/ginger_P3
+db.url=jdbc:mysql://localhost/ginger_P4
 db.driver=com.mysql.jdbc.Driver
 db.user=root
 db.pass=root
