--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -224,7 +224,7 @@ mail.smtp=mock
 db.url=jdbc:mysql://localhost/ginger_P2
 db.driver=com.mysql.jdbc.Driver
 db.user=root
-db.pass=
+db.pass=root
 
 #jpa.dialect=org.hibernate.dialect.SQLServerDialect
 jpa.dialect=org.hibernate.dialect.MySQLDialect
