fixed locations bug

--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -221,10 +221,10 @@ mail.smtp=mock
 #db.user=uservad
 #db.pass=uservad
 
-db.url=jdbc:mysql://localhost/ginger_P2
+db.url=jdbc:mysql://localhost/ginger_P3
 db.driver=com.mysql.jdbc.Driver
 db.user=root
-db.pass=
+db.pass=root
 
 #jpa.dialect=org.hibernate.dialect.SQLServerDialect
 jpa.dialect=org.hibernate.dialect.MySQLDialect
