--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -173,13 +173,17 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-mail.smtp=mock
+#mail.smtp=mock
 
 # Or, specify mail host configuration
 # mail.smtp.host=127.0.0.1
 # mail.smtp.user=admin
 # mail.smtp.pass=
 # mail.smtp.channel=ssl
+mail.smtp.host=smtp.gmail.com
+mail.smtp.user=johan.rosiers@vad.be
+mail.smtp.pass=Jrosiers024
+mail.smtp.channel=ssl
 
 # Url-resolving in Jobs
 # ~~~~~~
