Ginger 4 VAD production release

--- a/SQLScriptGenerator/app.config
+++ b/SQLScriptGenerator/app.config
@@ -1,20 +1,19 @@
-sectors_file=input_data/sectors.txt
-locations_file=input_data/locations2.txt
-postcodes_file=input_data/postcodes1.txt
-#cluster_file=input_data/ginger_clusters_export_tsv.txt
-cluster_file=input_data/new_data/clusters_20111010.txt
-activity_type_file=input_data/activity_type.txt
-input_data/new_data/activities_20111010.txt
-materials_file=input_data/materials.txt
-items_file=input_data/items.txt
-attendant_type_file=input_data/attendant_type.txt
-organization_file=input_data/new_data/organisaties_20111010.txt
-#organization_file=input_data/ginger_organisaties_export_tsv.txt
-sub_organization_file=input_data/new_data/sub_organisaties_20111010.txt
-#sub_organization_file=input_data/ginger_suborganisaties_export_tsv.txt
-#activity_file=input_data/ginger_activiteit_export_tsv.txt
-activity_file=input_data/new_data/activities_20111010.txt
-user_id_file=input_data/new_data/users_20111010.txt
-role_id_file=input_data/new_data/roles_20111010.txt
-user_roles_file=input_data/new_data/users_in_roles_20111010.txt
-db_name=test14
+sectors_file=SQLScriptGenerator/input_data/sectors.txt
+locations_file=SQLScriptGenerator/input_data/locations2.txt
+postcodes_file=SQLScriptGenerator/input_data/postcodes1.txt
+#cluster_file=SQLScriptGenerator/input_data/ginger_clusters_export_tsv.txt
+cluster_file=SQLScriptGenerator/input_data/final_data/clusters_20120202.txt
+activity_type_file=SQLScriptGenerator/input_data/activity_type.txt
+materials_file=SQLScriptGenerator/input_data/materials.txt
+items_file=SQLScriptGenerator/input_data/items.txt
+attendant_type_file=SQLScriptGenerator/input_data/attendant_type.txt
+organization_file=SQLScriptGenerator/input_data/final_data/organisaties_20120202.txt
+#organization_file=SQLScriptGenerator/input_data/ginger_organisaties_export_tsv.txt
+sub_organization_file=SQLScriptGenerator/input_data/final_data/sub_organisaties_20120202.txt
+#sub_organization_file=SQLScriptGenerator/input_data/ginger_suborganisaties_export_tsv.txt
+#activity_file=SQLScriptGenerator/input_data/ginger_activiteit_export_tsv.txt
+activity_file=SQLScriptGenerator/input_data/final_data/activities_20120202.txt
+user_id_file=SQLScriptGenerator/input_data/final_data/users_20120202.txt
+role_id_file=SQLScriptGenerator/input_data/final_data/roles_20120202.txt
+user_roles_file=SQLScriptGenerator/input_data/final_data/users_in_roles_20120202.txt
+db_name=vad
