--- a/vadginger-alpha/conf/application.conf
+++ b/vadginger-alpha/conf/application.conf
@@ -233,4 +233,4 @@ db.pass=
 #jpa.dialect=org.hibernate.dialect.SQLServerDialect
 jpa.dialect=org.hibernate.dialect.MySQLDialect
 jpa.ddl=update
-jpa.debugSQL=true
+jpa.debugSQL=false
